--- a/OLIDSOLUTON/Pages/Index.razor
+++ b/OLIDSOLUTON/Pages/Index.razor
@@ -37,5 +37,13 @@
         margin: 10px 0;
         font-size: 3rem;
     }
+    index {
+    background-color: #f7f7f7;
+    border-bottom: 1px solid rgb(5, 39, 103);
+    justify-content: flex-end;
+    height: 3.5rem;
+    display: flex;
+    align-items: center;
+}
 </style>
 
