--- a/OLIDSOLUTON/Pages/Video.razor
+++ b/OLIDSOLUTON/Pages/Video.razor
@@ -1,16 +1,17 @@
 ﻿@page "/video"
 
 <h3>Favorite Vloggs</h3>
-<iframe width="451" height="315" src="https://www.youtube.com/embed/PRnMfx3JK9I?si=nq3skEMCDLM9rzZO"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin"
-        allowfullscreen>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/CIUo7T011oE?si=r-9y6bs7aYXyUKQ7"
+        title="YouTube video player" 
+frameborder="0" 
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+referrerpolicy="strict-origin-when-cross-origin" 
+allowfullscreen>
 </iframe>
 
 <h3></h3>
 
-<iframe width="451" height="315" src="https://www.youtube.com/embed/-BnUY5z0Qcg?si=gga63aXQlSYGvETS"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/-BnUY5z0Qcg?si=gga63aXQlSYGvETS"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -20,7 +21,7 @@
 
 <h3></h3>
 
-<iframe width="451" height="315" src="https://www.youtube.com/embed/vzH_FSGHWnk?si=pOxpY_SB-a60i_7L"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/vzH_FSGHWnk?si=pOxpY_SB-a60i_7L"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -31,7 +32,7 @@
 <h3></h3>
 
 
-<iframe width="451" height="315" src="https://www.youtube.com/embed/gsMcmz3ds4E?si=tg0KnyauOV3k-Dl5"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gsMcmz3ds4E?si=tg0KnyauOV3k-Dl5"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -42,7 +43,7 @@
 
 <h3></h3>
 
-<iframe width="451" height="315" src="https://www.youtube.com/embed/XaF94-NiNkg?si=2hZETBZeI7rlO4tm"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/XaF94-NiNkg?si=2hZETBZeI7rlO4tm"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
