--- a/OLIDSOLUTON/Pages/Index.razor
+++ b/OLIDSOLUTON/Pages/Index.razor
@@ -8,22 +8,22 @@
 <h2>
     Dear Visitor,
 
-    Welcome to my new website! I'm thrilled to have you here.
+    Welcome to my new website! I'm thrilled to have you here.<br><br>
 
 
 
-    This space was created with you in mind, and I hope you find it both informative and engaging. Whether you're here to explore, learn, or simply browse, I’m confident you’ll find something of interest.
+    This space was created with you in mind, and I hope you find it both informative and engaging. Whether you're here to explore, learn, or simply browse, I’m confident you’ll find something of interest.<br><br>
 
 
 
-    Thank you for stopping by, and I look forward to connecting with you!
+    Thank you for stopping by, and I look forward to connecting with you!<br><br>
 
 
 
-    Best regards,
+    Best regards,<br><br>
 
 
-    Edzel John Olid
+    Edzel John Olid<br><br>
 </h2>
 
 
