--- a/OLIDSOLUTON/wwwroot/css/site.css
+++ b/OLIDSOLUTON/wwwroot/css/site.css
@@ -14,7 +14,7 @@ a, .btn-link {
 
 .btn-primary {
     color: #fff;
-    background-color: #1b6ec2;
+    background-color: #171686;
     border-color: #1861ac;
 }
 
@@ -62,3 +62,8 @@ a, .btn-link {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+.my-custom-background {
+    background-color: darkblue;
+}
+
