--- a/OLIDSOLUTON/Shared/MainLayout.razor
+++ b/OLIDSOLUTON/Shared/MainLayout.razor
@@ -193,10 +193,10 @@
         </div>
     </footer>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-<script src="https://daniellaharel.com/raindrops/js/raindrops.js"></script>
+<div src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></div>
+<div src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></div>
+<div src="https://daniellaharel.com/raindrops/js/raindrops.js"></div>
 
-<script>
+<div>
     jQuery('#waterdrop').raindrops({ color: '#1c1f2f', canvasHeight: 150, density: 0.1, frequency: 20 });
-</script>
+</div>
