--- a/OLID_SOLUTION/WEBAPP/Pages/Index.razor
+++ b/OLID_SOLUTION/WEBAPP/Pages/Index.razor
@@ -31,11 +31,13 @@
     h2 {
         margin: 10px 0;
         font-size: 2rem;
+        color: white;
     }
 
     h1 {
         margin: 10px 0;
         font-size: 3rem;
+        color: white;
     }
     index {
     background-color: #f7f7f7;
