--- a/OLID_SOLUTION/WEBAPP/Pages/Music.razor
+++ b/OLID_SOLUTION/WEBAPP/Pages/Music.razor
@@ -1,9 +1,19 @@
 ﻿@page "/music"
 
 <h3>My Favorite Music</h3>
+<br><br>
 
-<p>Enjoy listening to your favorite music directly from Spotify:</p>
+<h3>Enjoy listening to your favorite music directly from Spotify:</h3>
 
+<style>
+    h3 {
+        margin: 10px 0;
+        font-size: 2rem;
+        color: white;
+    }
+ </style>
+
+ <br><br>
 <div>
     
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1imaIe1NEAaWnLF0BY0V6F?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">"
