--- a/OLID_SOLUTION/WEBAPP/Pages/Video.razor
+++ b/OLID_SOLUTION/WEBAPP/Pages/Video.razor
@@ -1,7 +1,14 @@
 ﻿@page "/video"
 
 <h3>Favorite Vloggs</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/CIUo7T011oE?si=r-9y6bs7aYXyUKQ7"
+<style>
+    h3 {
+      
+        color: white;
+    }
+    </style>
+
+<iframe width="790" height="310" src="https://www.youtube.com/embed/CIUo7T011oE?si=r-9y6bs7aYXyUKQ7"
         title="YouTube video player" 
 frameborder="0" 
 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -9,9 +16,9 @@ referrerpolicy="strict-origin-when-cross-origin"
 allowfullscreen>
 </iframe>
 
-<h3></h3>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/-BnUY5z0Qcg?si=gga63aXQlSYGvETS"
+
+<iframe width="790" height="310" src="https://www.youtube.com/embed/-BnUY5z0Qcg?si=gga63aXQlSYGvETS"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -19,9 +26,8 @@ allowfullscreen>
         allowfullscreen>
 </iframe>
 
-<h3></h3>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/vzH_FSGHWnk?si=pOxpY_SB-a60i_7L"
+<iframe width="790" height="310" src="https://www.youtube.com/embed/vzH_FSGHWnk?si=pOxpY_SB-a60i_7L"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -29,10 +35,9 @@ allowfullscreen>
         allowfullscreen>
 </iframe>
 
-<h3></h3>
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/gsMcmz3ds4E?si=tg0KnyauOV3k-Dl5"
+<iframe width="790" height="310" src="https://www.youtube.com/embed/gsMcmz3ds4E?si=tg0KnyauOV3k-Dl5"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -41,9 +46,31 @@ allowfullscreen>
 
 
 
-<h3></h3>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/XaF94-NiNkg?si=2hZETBZeI7rlO4tm"
+
+<iframe width="790" height="310" src="https://www.youtube.com/embed/4valhGFoafg?si=Y5qxxccBlCvz5q1m"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen></iframe>
+
+
+<iframe width="790" height="310" src="https://www.youtube.com/embed/PkAH3Q7xaJI?si=kqIeHwitkaLS3JYo"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen></iframe>
+
+<iframe width="790" height="310" src="https://www.youtube.com/embed/rIMD1arZwn0?si=669kFXfrOg91whU8"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen></iframe>
+
+<iframe width="790  " height="310" src="https://www.youtube.com/embed/tFPR8qNWcKc?si=YgIWsYX0WROX9cIH"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
