--- a/OLID_SOLUTION/WEBAPP/Pages/Weather.razor
+++ b/OLID_SOLUTION/WEBAPP/Pages/Weather.razor
@@ -46,3 +46,9 @@ else
         forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
     }
 }
+
+<style scoped>
+    body, h1, p, table, th, td {
+        color: white;
+    }
+</style>
