--- a/OLID_SOLUTION/WEBAPP/wwwroot/css/site.css
+++ b/OLID_SOLUTION/WEBAPP/wwwroot/css/site.css
@@ -67,4 +67,9 @@ a, .btn-link {
 .my-custom-background {
     background-color: darkblue;
 }
-
+WeatherForecastService {
+    color: white;
+}
+WeatherForecast {
+    color: white;
+}
