--- a/OLID_SOLUTION/WEBAPP/_Imports.razor
+++ b/OLID_SOLUTION/WEBAPP/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using OLIDSOLUTON
 @using OLIDSOLUTON.Shared
+@using System.Collections.Generic
+@using System.Threading.Tasks
+
